NP-19401-contributor-to-test-data, publicationContext report mapped