@@ -4,37 +4,36 @@ import static no.unit.nva.testutils.RandomDataGenerator.randomBoolean;
 import static no.unit.nva.testutils.RandomDataGenerator.randomDoi;
 import static no.unit.nva.testutils.RandomDataGenerator.randomInteger;
 import static no.unit.nva.testutils.RandomDataGenerator.randomIssn;
-import static no.unit.nva.testutils.RandomDataGenerator.randomLocalDateTime;
+import static no.unit.nva.testutils.RandomDataGenerator.randomLocalDate;
 import static no.unit.nva.testutils.RandomDataGenerator.randomString;
-import static no.unit.nva.testutils.RandomDataGenerator.randomUri;
 import java.net.URI;
-import java.time.format.DateTimeFormatter;
+import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Random;
 import java.util.UUID;
-import no.sikt.nva.brage.migration.model.Record;
-import no.sikt.nva.brage.migration.model.Type;
-import no.sikt.nva.brage.migration.model.content.ContentFile;
-import no.sikt.nva.brage.migration.model.content.ResourceContent;
-import no.sikt.nva.brage.migration.model.content.ResourceContent.BundleType;
-import no.sikt.nva.brage.migration.model.entitydescription.Contributor;
-import no.sikt.nva.brage.migration.model.entitydescription.Identity;
-import no.sikt.nva.brage.migration.model.entitydescription.Language;
-import no.sikt.nva.brage.migration.model.entitydescription.PublicationDate;
-import no.sikt.nva.brage.migration.model.entitydescription.PublicationInstance;
-import no.sikt.nva.brage.migration.model.entitydescription.PublishedDate;
-import no.sikt.nva.brage.migration.model.license.License;
-import no.sikt.nva.brage.migration.model.license.NvaLicense;
-import no.sikt.nva.brage.migration.model.license.NvaLicenseIdentifier;
+import no.sikt.nva.brage.migration.record.Contributor;
+import no.sikt.nva.brage.migration.record.Identity;
+import no.sikt.nva.brage.migration.record.Language;
+import no.sikt.nva.brage.migration.record.PublicationInstance;
+import no.sikt.nva.brage.migration.record.PublishedDate;
+import no.sikt.nva.brage.migration.record.Record;
+import no.sikt.nva.brage.migration.record.Type;
+import no.sikt.nva.brage.migration.record.content.ContentFile;
+import no.sikt.nva.brage.migration.record.content.ResourceContent;
+import no.sikt.nva.brage.migration.record.content.ResourceContent.BundleType;
+import no.sikt.nva.brage.migration.record.license.License;
+import no.sikt.nva.brage.migration.record.license.NvaLicense;
+import no.sikt.nva.brage.migration.record.license.NvaLicenseIdentifier;
 import no.sikt.nva.brage.migration.testutils.type.BrageType;
 import no.sikt.nva.brage.migration.testutils.type.TypeMapper;
 import no.unit.nva.model.EntityDescription;
-import no.unit.nva.model.Organization;
 import no.unit.nva.model.Publication;
-import no.unit.nva.model.ResourceOwner;
+import no.unit.nva.model.Reference;
+import no.unit.nva.model.Role;
 import nva.commons.core.language.LanguageMapper;
 import nva.commons.core.paths.UriWrapper;
+import org.joda.time.Instant;
 
 public class NvaBrageMigrationDataGenerator {
 
@@ -42,7 +41,7 @@ public class NvaBrageMigrationDataGenerator {
     private final Publication correspondingNvaPublication;
 
     public NvaBrageMigrationDataGenerator(Builder builder) {
-        brageRecord = createBrageRecordWithoutCristinId(builder);
+        brageRecord = createRecord(builder);
         correspondingNvaPublication = createCorrespondingNvaPublication(builder);
     }
 
@@ -54,9 +53,9 @@ public class NvaBrageMigrationDataGenerator {
         return correspondingNvaPublication;
     }
 
-    public PublishedDate createRandomPublishedDate() {
-        var date = randomLocalDateTime().toString();
-        return new PublishedDate(List.of(date), date);
+    private static java.time.Instant convertPublishedDateToInstant(Builder builder) {
+        return Instant.parse((builder.publishedDate.getNvaDate())).toDate()
+                   .toInstant();
     }
 
     private Publication createCorrespondingNvaPublication(Builder builder) {
@@ -64,45 +63,38 @@ public class NvaBrageMigrationDataGenerator {
                               .withDoi(builder.getDoi())
                               .withHandle(builder.getHandle())
                               .withEntityDescription(createEntityDescription(builder))
-                              .withPublisher(createPublisher(builder))
+                              .withPublishedDate(convertPublishedDateToInstant(builder))
                               .build();
         return publication;
-    }
-
-    private Organization createPublisher(Builder builder) {
-        var organization = new Organization();
-        organization.setId(builder.getCustomerUri());
-        return organization;
     }
 
     private EntityDescription createEntityDescription(Builder builder) {
         return new EntityDescription.Builder()
                    .withLanguage(builder.getLanguage().getNva())
+                   .withContributors(List.of(createCorrespondingContributor()))
+                   .withReference(new Reference())
+                   .withDescription(builder.getDescription())
+                   .withAbstract(builder.getEntityAbstract())
                    .build();
     }
 
-    private ResourceOwner createResourceOwner(Builder builder) {
-        return new ResourceOwner(null, builder.getCustomerUri());
-    }
-
-    private Record createBrageRecordWithoutCristinId(Builder builder) {
+    private Record createRecord(Builder builder) {
         var record = new Record();
-        record.setCustomerId(builder.getCustomerUri());
+        record.setCustomer(builder.getCustomer());
         record.setDoi(builder.getDoi());
         record.setId(builder.getHandle());
         record.setEntityDescription(createBrageEntityDescription(builder));
         record.setType(createRandomSingleType());
         record.setBrageLocation(createRandomBrageLocation());
         record.setContentBundle(createSingleResourceContent());
-        record.setPublishedDate(createRandomPublishedDate());
         record.setPublication(createRandomPublication());
+        record.setPublishedDate(builder.getPublishedDate());
         return record;
     }
 
-    private no.sikt.nva.brage.migration.model.Publication createRandomPublication() {
-        var publication = new no.sikt.nva.brage.migration.model.Publication();
+    private no.sikt.nva.brage.migration.record.Publication createRandomPublication() {
+        var publication = new no.sikt.nva.brage.migration.record.Publication();
         publication.setIssn(randomIssn());
-        publication.setPublisher(randomString());
         return publication;
     }
 
@@ -118,10 +110,13 @@ public class NvaBrageMigrationDataGenerator {
         return randomInteger() + "/" + randomInteger(100);
     }
 
-    private Contributor createRandomContributor() {
-        var randomRole = createRandomRole();
-        return new Contributor(Builder.DEFAULT_CONTRIBUTOR_TYPE, createRandomIdentity(), randomRole,
-                               createCorrespondingBrageRole(randomRole));
+    private no.unit.nva.model.Contributor createCorrespondingContributor() {
+        var contributor = createContributor();
+        String name = contributor.getIdentity().getName();
+        return new no.unit.nva.model.Contributor.Builder()
+                   .withIdentity(new no.unit.nva.model.Identity.Builder().withName(name).build())
+                   .withRole(Role.lookup(contributor.getRole()))
+                   .build();
     }
 
     private Type createRandomSingleType() {
@@ -140,24 +135,24 @@ public class NvaBrageMigrationDataGenerator {
     }
 
     private String createRandomRole() {
-        var listOfSomePossibleRoles = List.of("Author", "Advisor", "Editor");
+        var listOfSomePossibleRoles = List.of("Creator", "Advisor", "Editor");
         return listOfSomePossibleRoles.get(randomInteger(2));
     }
 
-    private no.sikt.nva.brage.migration.model.entitydescription.EntityDescription createBrageEntityDescription(
+    private no.sikt.nva.brage.migration.record.EntityDescription createBrageEntityDescription(
         Builder builder) {
-        var entityDescription = new no.sikt.nva.brage.migration.model.entitydescription.EntityDescription();
+        var entityDescription = new no.sikt.nva.brage.migration.record.EntityDescription();
         entityDescription.setLanguage(builder.getLanguage());
-        entityDescription.setDescriptions(List.of(randomString()));
-        entityDescription.setAbstracts(List.of(randomString()));
-        entityDescription.setContributors(List.of(createRandomContributor()));
         entityDescription.setMainTitle(randomString());
         entityDescription.setAlternativeTitles(List.of(randomString()));
-        entityDescription.setTags(List.of(randomString()));
-        entityDescription.setPublicationInstance(createRandomPublicationInstance());
-        String date = randomLocalDateTime().format(DateTimeFormatter.ofPattern("yyyy"));
-        entityDescription.setPublicationDate(new PublicationDate(date, date));
+        entityDescription.setContributors(List.of(createContributor()));
+        entityDescription.setDescriptions(Collections.singletonList(builder.getDescription()));
+        entityDescription.setAbstracts(Collections.singletonList(builder.getEntityAbstract()));
         return entityDescription;
+    }
+
+    private Contributor createContributor() {
+        return new Contributor(new Identity("Ola"), "Creator", "author");
     }
 
     private PublicationInstance createRandomPublicationInstance() {
@@ -169,21 +164,26 @@ public class NvaBrageMigrationDataGenerator {
 
     public static class Builder {
 
-        public static final String DEFAULT_CONTRIBUTOR_TYPE = "Contributor";
         private URI handle;
         private URI doi;
         private String brageLocation;
         private List<ContentFile> contentFiles;
-        private URI customerUri;
+        private String customerUri;
         private Language language;
         private Contributor contributor;
         private Type type;
         private ResourceContent resourceContent;
         private PublishedDate publishedDate;
         private EntityDescription entityDescription;
-        private no.sikt.nva.brage.migration.model.Publication publication;
+        private no.sikt.nva.brage.migration.record.Publication publication;
+        private String description;
+        private String entityAbstract;
 
-        public no.sikt.nva.brage.migration.model.Publication getPublication() {
+        public String getEntityAbstract() {
+            return entityAbstract;
+        }
+
+        public no.sikt.nva.brage.migration.record.Publication getPublication() {
             return publication;
         }
 
@@ -201,6 +201,10 @@ public class NvaBrageMigrationDataGenerator {
 
         public String getBrageLocation() {
             return brageLocation;
+        }
+
+        public String getDescription() {
+            return description;
         }
 
         public Type getType() {
@@ -227,11 +231,11 @@ public class NvaBrageMigrationDataGenerator {
             return contentFiles;
         }
 
-        public URI getCustomerUri() {
+        public String getCustomer() {
             return customerUri;
         }
 
-        public Builder withPublication(no.sikt.nva.brage.migration.model.Publication publication) {
+        public Builder withPublication(no.sikt.nva.brage.migration.record.Publication publication) {
             this.publication = publication;
             return this;
         }
@@ -271,13 +275,18 @@ public class NvaBrageMigrationDataGenerator {
             return this;
         }
 
-        public Builder withContributor() {
+        public Builder withContributor(Contributor contributor) {
             this.contributor = contributor;
             return this;
         }
 
         public Builder withType() {
             this.type = type;
+            return this;
+        }
+
+        public Builder withDescription() {
+            this.description = description;
             return this;
         }
 
@@ -289,12 +298,27 @@ public class NvaBrageMigrationDataGenerator {
                 doi = randomDoi();
             }
             if (Objects.isNull(customerUri)) {
-                customerUri = randomUri();
+                customerUri = randomString();
             }
             if (Objects.isNull(language)) {
                 language = randomLanguage1();
             }
+            if (Objects.isNull(publishedDate)) {
+                publishedDate = randomPublishedDate();
+            }
+            if (Objects.isNull(description)) {
+                description = randomString();
+            }
+            if (Objects.isNull(entityAbstract)) {
+                entityAbstract = randomString();
+            }
             return new NvaBrageMigrationDataGenerator(this);
+        }
+
+        private PublishedDate randomPublishedDate() {
+            var date = randomLocalDate();
+            var publishedDate = new PublishedDate(Collections.singletonList(date.toString()), date.toString());
+            return publishedDate;
         }
 
         private Language randomLanguage1() {
